--- a/docs/.vitepress/theme/styles/index.scss
+++ b/docs/.vitepress/theme/styles/index.scss
@@ -9,6 +9,17 @@ html {
   --badge-font-color: #4e5969;
   --description-font-color: #86909c;
   --blog-theme-color: #409eff;
+
+  --color-text-t0: rgba(0, 0, 0, 1);
+  --color-text-t1: rgba(22, 24, 35, 1);
+  --color-text-t2: rgba(255, 255, 255, 0.75);
+  --color-text-t3: rgba(22, 24, 35, 0.6);
+  --color-text-t2: rgba(22, 24, 35, 0.75);
+  --color-bg-b1: rgba(249, 249, 249, 1);
+  --color-bg-b2: rgba(242, 242, 243, 1);
+  --color-line-l2: rgba(22, 24, 35, 0.2);
+  --color-line-l3: rgba(22, 24, 35, 0.06);
+  --color-shadow1: rgba(0, 0, 0, 0.04);
 }
 
 html[class='dark'] {
@@ -19,6 +30,16 @@ html[class='dark'] {
   --box-shadow-hover: 0 2px 16px 0 rgba(0, 0, 0, 0.7);
   --badge-font-color: #bdc3cc;
   --description-font-color: #9facba;
+
+  --color-text-t0: rgba(255, 255, 255, 1);
+  --color-text-t1: rgba(255, 255, 255, 0.9);
+
+  --color-text-t3: rgba(255, 255, 255, 0.5);
+  --color-bg-b1: rgba(37, 38, 50, 1);
+  --color-bg-b2: rgba(51, 52, 63, 1);
+  --color-line-l2: rgba(255, 255, 255, 0.16);
+  --color-line-l3: rgba(255, 255, 255, 0.04);
+  --color-shadow1: rgba(0, 0, 0, 0.6);
 }
 .VPHome {
   &::before {
@@ -53,7 +74,6 @@ html[class='dark'] {
     background-color: var(--nav-bgc);
   }
 }
-
 
 @media screen and (min-width: 960px) and (max-width: 1120px) {
   .VPContent.has-sidebar {
