--- a/docs/.vitepress/theme/styles/vars.css
+++ b/docs/.vitepress/theme/styles/vars.css
@@ -14,10 +14,10 @@
   --vp-home-hero-image-filter: blur(40px);
 
   /* 1.0.0-beta.7 及以前版本配色方案 */
-  --vp-c-brand-1: var(--vp-c-green-1);
+  /* --vp-c-brand-1: var(--vp-c-green-1);
   --vp-c-brand-2: var(--vp-c-green-2);
   --vp-c-brand-3: var(--vp-c-green-3);
-  --vp-c-brand-soft: var(--vp-c-green-soft);
+  --vp-c-brand-soft: var(--vp-c-green-soft); */
 }
 
 @media (min-width: 640px) {
